--- a/modules/home-manager/features/launchers/wofi/style.css.mustache
+++ b/modules/home-manager/features/launchers/wofi/style.css.mustache
@@ -18,7 +18,7 @@ window {
   border: transparent;
   outline: transparent;
   box-shadow: none;
-  margin-left: -16px;
+  /*margin-left: -16px;*/
 }
 
 #inner-box {
@@ -40,6 +40,6 @@ window {
   padding-right: 10px;
 }
 
-#input > image.left {
+/*#input > image.left {
   -gtk-icon-transform:scaleX(0);
-}
+}*/
