--- a/modules/home-manager/features/simple-logout/config/style.css.mustache
+++ b/modules/home-manager/features/simple-logout/config/style.css.mustache
@@ -1,10 +1,8 @@
-.background {
-  background-color: transparent;
-  background-image: none;
-  border-radius: 10px;
-  background-color: #{{base00}};
-  border: 1px solid #{{base01}};
-  padding: 15px;
+window {
+    border-radius: 10px;
+    background-color: #{{base00}};
+    border: 1px solid #{{base01}};
+    padding: 15px;
 }
 
 button {
