--- a/modules/home-manager/features/web-browsers/firefox/theme/gnomeTheme.css.mustache
+++ b/modules/home-manager/features/web-browsers/firefox/theme/gnomeTheme.css.mustache
@@ -86,5 +86,7 @@
   &:-moz-window-inactive {
     --gnome-tabbar-tab-hover-background: var(--gnome-tabbar-tab-hover-background);
     --gnome-tabbar-tab-active-background: var(--gnome-tabbar-tab-active-background);
+    --gnome-sidebar-background: #{{base00-hex}};
+    --gnome-secondary-sidebar-background: #{{base00-hex}};
   }
 }
