add firefox gnome theme with tweaks

--- a/modules/home-manager/features/web-browsers/firefox/theme/gnomeTheme.css.mustache
+++ b/modules/home-manager/features/web-browsers/firefox/theme/gnomeTheme.css.mustache
@@ -83,6 +83,10 @@
   --gnome-private-in-content-page-background: #{{base00-hex}};
   --gnome-private-text-primary-color: #{{base04-hex}};
 
+  /* Miscellaneous */
+  --gnome-private-in-content-page-background: #{{base00-hex}};
+  --gnome-private-text-primary-color: #{base05-hex};
+
   &:-moz-window-inactive {
     --gnome-tabbar-tab-hover-background: var(--gnome-tabbar-tab-hover-background);
     --gnome-tabbar-tab-active-background: var(--gnome-tabbar-tab-active-background);
