add firefox gnome theme with tweaks

--- a/modules/home-manager/features/web-browsers/firefox/theme/gnomeTheme.css.mustache
+++ b/modules/home-manager/features/web-browsers/firefox/theme/gnomeTheme.css.mustache
@@ -90,7 +90,7 @@
   /* Private browsing colors */
   &[privatebrowsingmode="temporary"] {
     /* Headerbar */
-    --gnome-headerbar-background: var(--gnome-accent-bg) !important;
+    --gnome-headerbar-background: #{{base00-hex}} !important;
     /* Tabs */	
     --gnome-tabbar-tab-hover-background: color-mix(in srgb, #{{base00-hex}}, #{{base01-hex}} 75%); /* Hardcoded color */
     --gnome-tabbar-tab-active-background: #{{base01-hex}}; /* Hardcoded color */
