add firefox gnome theme with tweaks

--- a/modules/home-manager/features/discord-clients/vesktop/midnight.theme.css.mustache
+++ b/modules/home-manager/features/discord-clients/vesktop/midnight.theme.css.mustache
@@ -90,8 +90,8 @@ body {
   /* background and dark colors */
   --bg-1: rgba({{base05-rgb-r}}, {{base05-rgb-g}}, {{base05-rgb-b}}, 0.25); /* dark buttons when clicked */
   --bg-2: rgba({{base05-rgb-r}}, {{base05-rgb-g}}, {{base05-rgb-b}}, 0.09); /* dark buttons */
-  --bg-3: #2d2424; /* spacing, secondary elements */
-  --bg-4: #1a1515; /* main background color */
+  --bg-3: #{{base01}}; /* spacing, secondary elements */
+  --bg-4: #{{base00}}; /* main background color */
   --hover: rgba({{base05-rgb-r}}, {{base05-rgb-g}}, {{base05-rgb-b}}, 0.045); /* channels and buttons when hovered */
   --active: rgba({{base05-rgb-r}}, {{base05-rgb-g}}, {{base05-rgb-b}}, 0.09);
   --active-2: rgba({{base05-rgb-r}}, {{base05-rgb-g}}, {{base05-rgb-b}}, 0.09);
