tweak discord theme

--- a/modules/home-manager/features/discord-clients/vesktop/midnight.theme.css.mustache
+++ b/modules/home-manager/features/discord-clients/vesktop/midnight.theme.css.mustache
@@ -166,6 +166,10 @@ body {
   --purple-4: #{{base0E}};
   --purple-5: #{{base0E}};
 
+  ::-webkit-scrollbar {
+    width: 8px;
+    background: #{{base00}};
+  }
   ::-webkit-scrollbar-thumb {
     background: #{{base02}};
   }
