--- a/modules/home-manager/features/discord-clients/vesktop/midnight.theme.css.mustache
+++ b/modules/home-manager/features/discord-clients/vesktop/midnight.theme.css.mustache
@@ -166,6 +166,7 @@ body {
   --purple-4: #{{base0E}};
   --purple-5: #{{base0E}};
 
+  sidebarList_c48ade ::-webkit-scrollbar,
   .messagesWrapper__36d07 ::-webkit-scrollbar {
     width: 8px;
     background: #{{base00}};
