tweak discord theme

--- a/modules/home-manager/features/discord-clients/vesktop/midnight.theme.css.mustache
+++ b/modules/home-manager/features/discord-clients/vesktop/midnight.theme.css.mustache
@@ -168,6 +168,7 @@ body {
 
   sidebarList_c48ade ::-webkit-scrollbar,
   .messagesWrapper__36d07 ::-webkit-scrollbar {
+    padding: 3px;
     width: 8px;
     background: #{{base00}};
   }
