--- a/modules/home-manager/features/discord-clients/vesktop/midnight.theme.css.mustache
+++ b/modules/home-manager/features/discord-clients/vesktop/midnight.theme.css.mustache
@@ -166,10 +166,9 @@ body {
   --purple-4: #{{base0E}};
   --purple-5: #{{base0E}};
 
-  .sidebarList_c48ade ::-webkit-scrollbar,
+  .container__2637a ::-webkit-scrollbar,
   .messagesWrapper__36d07 ::-webkit-scrollbar {
     width: 10px;
-    background: #{{base00}};
   }
   ::-webkit-scrollbar-thumb {
     background: #{{base02}};
