tweak discord theme

--- a/modules/home-manager/features/discord-clients/vesktop/midnight.theme.css.mustache
+++ b/modules/home-manager/features/discord-clients/vesktop/midnight.theme.css.mustache
@@ -166,7 +166,7 @@ body {
   --purple-4: #{{base0E}};
   --purple-5: #{{base0E}};
 
-  .container__2637a ::-webkit-scrollbar,
+  .scrollerBase__99f8c ::-webkit-scrollbar,
   .messagesWrapper__36d07 ::-webkit-scrollbar {
     width: 10px;
   }
