--- a/modules/home-manager/features/web-browsers/firefox/theme/gnomeTheme.css.mustache
+++ b/modules/home-manager/features/web-browsers/firefox/theme/gnomeTheme.css.mustache
@@ -76,7 +76,7 @@
   --gnome-tabbar-tab-hover-background: color-mix(in srgb, #{{base00-hex}}, #{{base01-hex}} 90%);
   --gnome-tabbar-tab-active-background: #{{base01-hex}};
   --gnome-tabbar-tab-active-background-contrast: #{{base01-hex}};
-  --gnome-tabbar-tab-active-hover-background: color-mix(in srgb, #{{base01-hex}}, #{{base02-hex}} 40%);
+  --gnome-tabbar-tab-active-hover-background: color-mix(in srgb, #{{base00-hex}} 91.5%, white);
 
   /* Private Tabs */
   --gnome-private-wordmark: #{{base04-hex}};
