--- a/modules/home-manager/features/discord-clients/vesktop/midnight.theme.css.mustache
+++ b/modules/home-manager/features/discord-clients/vesktop/midnight.theme.css.mustache
@@ -130,10 +130,10 @@ body {
   --offline: var(--text-4); /* change to #83838b for default offline color */
 
   /* border colors */
-  --border-light: #{{base01}}; /* general light border color */
-  --border: #{{base00}}; /* general normal border color */
+  --border-light: transparent; /* general light border color */
+  --border: transparent; /* general normal border color */
   --border-hover: #{{base01}}; /* border color of panels when hovered */
-  --button-border: #{{base01}};
+  --button-border: transparent;
 
   /* base colors */
   --red-1: #{{base08}};
