--- a/modules/home-manager/features/web-browsers/firefox/theme/gnomeTheme.css.mustache
+++ b/modules/home-manager/features/web-browsers/firefox/theme/gnomeTheme.css.mustache
@@ -73,7 +73,7 @@
   --gnome-toolbar-icon-fill: #{{base05-hex}};
 
   /* Tabs */
-  --gnome-tabbar-tab-hover-background: color-mix(in srgb, #{{base00-hex}}, #{{base01-hex}} 90%);
+  --gnome-tabbar-tab-hover-background: color-mix(in srgb, #{{base00-hex}} 85%, white);
   --gnome-tabbar-tab-active-background: #{{base01-hex}};
   --gnome-tabbar-tab-active-background-contrast: #{{base01-hex}};
   --gnome-tabbar-tab-active-hover-background: color-mix(in srgb, #{{base00-hex}} 91.5%, white);
