--- a/modules/home-manager/features/web-browsers/firefox/theme/gnomeTheme.css.mustache
+++ b/modules/home-manager/features/web-browsers/firefox/theme/gnomeTheme.css.mustache
@@ -92,10 +92,10 @@
     /* Headerbar */
     --gnome-headerbar-background: #{{base00-hex}} !important;
     /* Tabs */	
-    --gnome-tabbar-tab-active-background: color-mix(in srgb, #{{base00-hex}}, #{{base01-hex}} 75%); /* Hardcoded color */
-    --gnome-tabbar-tab-hover-background: color-mix(in srgb, #{{base00-hex}}, #{{base01-hex}} 80%); /* Hardcoded color */
-    --gnome-tabbar-tab-active-background-contrast: #{{base01-hex}}; /* Hardcoded color */
-    --gnome-tabbar-tab-active-hover-background: color-mix(in srgb, #{{base01-hex}}, #{{base02-hex}} 25%); /* Hardcoded color */
+    --gnome-tabbar-tab-active-background: color-mix(in srgb, #{{base00-hex}} 91.5%, white);
+    --gnome-tabbar-tab-hover-background: color-mix(in srgb, #{{base00-hex}} 85%, white);
+    --gnome-tabbar-tab-active-background-contrast: #{{base01-hex}};
+    --gnome-tabbar-tab-active-hover-background: color-mix(in srgb, #{{base00-hex}} 91.5%, white);
     
     /* Private and backdrop colors */
     &:-moz-window-inactive {
