--- a/modules/home-manager/features/discord-clients/vesktop/midnight.theme.css.mustache
+++ b/modules/home-manager/features/discord-clients/vesktop/midnight.theme.css.mustache
@@ -167,7 +167,8 @@ body {
   --purple-5: #{{base0E}};
 
   .scrollerBase__99f8c ::-webkit-scrollbar,
-  .messagesWrapper__36d07 ::-webkit-scrollbar {
+  .messagesWrapper__36d07 ::-webkit-scrollbar,
+  .peopleColumn__133bf ::-webkit-scrollbar {
     width: 10px;
   }
   ::-webkit-scrollbar-thumb {
