--- a/modules/home-manager/features/discord-clients/vesktop/midnight.theme.css.mustache
+++ b/modules/home-manager/features/discord-clients/vesktop/midnight.theme.css.mustache
@@ -167,9 +167,11 @@ body {
   --purple-5: #{{base0E}};
 
   .scrollerBase__99f8c ::-webkit-scrollbar,
-  .messagesWrapper__36d07 ::-webkit-scrollbar,
-  .peopleColumn__133bf ::-webkit-scrollbar {
+  .messagesWrapper__36d07 ::-webkit-scrollbar {
     width: 10px;
+  }
+  .peopleColumn__133bf ::-webkit-scrollbar {
+    width: 8px;
   }
   ::-webkit-scrollbar-thumb {
     background: #{{base02}};
