--- a/modules/home-manager/features/discord-clients/vesktop/midnight.theme.css.mustache
+++ b/modules/home-manager/features/discord-clients/vesktop/midnight.theme.css.mustache
@@ -173,7 +173,7 @@ body {
   .peopleColumn__133bf ::-webkit-scrollbar {
     width: 8px;
   }
-  ::-webkit-scrollbar-thumb {
+  ::-webkit-scrollbar-thumb:hover {
     background: #{{base02}};
   }
 }
