--- a/modules/home-manager/features/discord-clients/vesktop/midnight.theme.css.mustache
+++ b/modules/home-manager/features/discord-clients/vesktop/midnight.theme.css.mustache
@@ -173,7 +173,9 @@ body {
   .peopleColumn__133bf ::-webkit-scrollbar {
     width: 8px;
   }
-  ::-webkit-scrollbar-thumb:hover {
+  .peopleColumn__133bf:hover ::-webkit-scrollbar-thumb,
+  .messagesWrapper__36d07:hover ::-webkit-scrollbar-thumb,
+  .scrollerBase__99f8c:hover ::-webkit-scrollbar-thumb {
     background: #{{base02}};
   }
 }
