--- a/modules/home-manager/features/discord-clients/vesktop/midnight.theme.css.mustache
+++ b/modules/home-manager/features/discord-clients/vesktop/midnight.theme.css.mustache
@@ -166,16 +166,10 @@ body {
   --purple-4: #{{base0E}};
   --purple-5: #{{base0E}};
 
-  .scrollerBase__99f8c ::-webkit-scrollbar,
   .messagesWrapper__36d07 ::-webkit-scrollbar {
     width: 10px;
   }
-  .peopleColumn__133bf ::-webkit-scrollbar {
-    width: 8px;
-  }
-  .peopleColumn__133bf:hover ::-webkit-scrollbar-thumb,
-  .messagesWrapper__36d07:hover ::-webkit-scrollbar-thumb,
-  .scrollerBase__99f8c:hover ::-webkit-scrollbar-thumb {
+  .messagesWrapper__36d07:hover ::-webkit-scrollbar-thumb {
     background: #{{base02}};
   }
 }
