--- a/modules/home-manager/features/discord-clients/vesktop/midnight.theme.css.mustache
+++ b/modules/home-manager/features/discord-clients/vesktop/midnight.theme.css.mustache
@@ -169,6 +169,10 @@ body {
   .messagesWrapper__36d07 ::-webkit-scrollbar {
     width: 10px;
   }
+  .peopleColumn__133bf ::-webkit-scrollbar {
+    width: 8px;
+  }
+  .peopleColumn__133bf:hover ::-webkit-scrollbar-thumb,
   .messagesWrapper__36d07:hover ::-webkit-scrollbar-thumb {
     background: #{{base02}};
   }
