--- a/modules/home-manager/features/discord-clients/vesktop/midnight.theme.css.mustache
+++ b/modules/home-manager/features/discord-clients/vesktop/midnight.theme.css.mustache
@@ -172,6 +172,9 @@ body {
   .peopleColumn__133bf ::-webkit-scrollbar {
     width: 8px;
   }
+  .scrollerBase__99f8c:hover ::-webkit-scrollbar-thumb {
+    background: transparent;
+  }
   .peopleColumn__133bf:hover ::-webkit-scrollbar-thumb,
   .messagesWrapper__36d07:hover ::-webkit-scrollbar-thumb {
     background: #{{base02}};
