--- a/modules/home-manager/features/launchers/wofi/style.css.mustache
+++ b/modules/home-manager/features/launchers/wofi/style.css.mustache
@@ -6,14 +6,14 @@ window {
 #outer-box {
   background: #{{base00}};
   border: 1px solid #{{base01}};
-  border-radius: 10px;
-  padding: 15px;
+  border-radius: 15px;
+  padding: 10px;
   /*box-shadow: 0 10px 20px rgba(0, 0, 0, 0.25);*/
 }
 
 #input, #input:focus {
   margin-bottom: 10px;
-  border-radius: 10px;
+  border-radius: 5px;
   background: #{{base00}};
   border: transparent;
   outline: transparent;
@@ -22,12 +22,13 @@ window {
 }
 
 #inner-box {
-  border-radius: 15px;
+  border-radius: 5px;
+  padding: none;
 }
 
 #entry, #selected, #unselected, #entry:focus {
   padding: 3px;
-  border-radius: 10px;
+  border-radius: 5px;
   border: transparent;
   outline: transparent;
 }
