--- a/modules/home-manager/features/launchers/wofi/style.css.mustache
+++ b/modules/home-manager/features/launchers/wofi/style.css.mustache
@@ -19,7 +19,7 @@ window {
   outline: transparent;
   box-shadow: none;
   padding: 5px;
-  /*margin-left: -16px;*/
+  margin-left: 5px;
 }
 
 #inner-box {
