--- a/modules/home-manager/features/launchers/wofi/style.css.mustache
+++ b/modules/home-manager/features/launchers/wofi/style.css.mustache
@@ -1,4 +1,3 @@
-
 window {
   background: transparent;
 }
@@ -35,7 +34,8 @@ window {
 }
 
 #entry:selected {
-  background: rgba({{base05-rgb-r}}, {{base05-rgb-g}}, {{base05-rgb-b}}, 0.09);
+  /*background: rgba({{base05-rgb-r}}, {{base05-rgb-g}}, {{base05-rgb-b}}, 0.09);*/
+  background: #{{base02}};
 }
 
 #img {
