--- a/modules/home-manager/features/bars/waybar/style.css
+++ b/modules/home-manager/features/bars/waybar/style.css
@@ -42,12 +42,12 @@ menuitem {
   border-radius: 5px;
 }
 
-.arrow.up,
+/*.arrow.up,
 .arrow.down,
 .arrow.left,
 .arrow.right {
   color: @fg;
-}
+}*/
 
 menuitem:hover {
   background-color: @bg2;
