--- a/modules/home-manager/features/launchers/wofi/style.css.mustache
+++ b/modules/home-manager/features/launchers/wofi/style.css.mustache
@@ -18,7 +18,7 @@ window {
   outline: transparent;
   box-shadow: none;
   padding: 5px;
-  margin-left: 10px;
+  margin-left: 15px;
 }
 
 #inner-box {
@@ -27,7 +27,7 @@ window {
 }
 
 #entry, #selected, #unselected, #entry:focus {
-  padding: 5px;
+  padding: 0;
   border-radius: 5px;
   border: transparent;
   outline: transparent;
