--- a/modules/home-manager/features/launchers/wofi/style.css.mustache
+++ b/modules/home-manager/features/launchers/wofi/style.css.mustache
@@ -27,7 +27,7 @@ window {
 }
 
 #entry, #selected, #unselected, #entry:focus {
-  padding: 0;
+  padding: 3px;
   border-radius: 5px;
   border: transparent;
   outline: transparent;
