--- a/modules/home-manager/features/eww/config/eww.scss
+++ b/modules/home-manager/features/eww/config/eww.scss
@@ -1,8 +1,11 @@
 .power {
   background: none;
+  padding: 25px;
 }
 
 .power-box {
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
+  margin: 25px;
   padding: 15px;
   border: 1px solid $border;
   border-radius: 15px;
@@ -10,9 +13,10 @@
 }
 
 .power-button-box button {
-  font-size: 50pt;
+  font-size: 48pt;
   font-family: "Font Awesome 7 Free";
-  padding: 10px;
+  padding: 15px;
+  border-radius: 15px;
 }
 
 // .user-box {
