--- a/modules/home-manager/features/eww/config/eww.scss
+++ b/modules/home-manager/features/eww/config/eww.scss
@@ -7,12 +7,18 @@ $round: 15px;
 
 .power {
   background: none;
-  padding: 25px;
+  padding-top: 5px;
+  padding-bottom: 25px;
+  padding-left: 25px;
+  padding-right: 25px;
 }
 
 .power-box {
+  margin-top: 5px;
+  margin-bottom: 25px;
+  margin-left: 25px;
+  margin-right: 25px;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
-  margin: 25px;
   padding: 15px;
   border: 1px solid $border;
   border-radius: 25px;
