--- a/modules/home-manager/features/eww/config/eww.scss
+++ b/modules/home-manager/features/eww/config/eww.scss
@@ -15,7 +15,7 @@ $round: 10px;
 }
 
 .power-box, .confirm-box {
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
+  //box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
   padding: 20px;
   border: 1px solid $border;
   border-radius: 20px;
