--- a/modules/home-manager/features/eww/config/eww.scss
+++ b/modules/home-manager/features/eww/config/eww.scss
@@ -1,5 +1,7 @@
 @import "colours";
 
+$round: 10px;
+
 * {
   all: unset;
   color: $fg;
@@ -15,7 +17,7 @@
 }
 
 .power-box, .confirm-box {
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
   padding: 20px;
   border: 1px solid $border;
   border-radius: 20px;
