--- a/modules/home-manager/features/eww/config/eww.scss
+++ b/modules/home-manager/features/eww/config/eww.scss
@@ -9,7 +9,7 @@ $green: #8CCF7E;
 $blue: #67B0E8;
 $purple: #C47FD5;
 
-@import "colours";
+//@import "colours";
 
 $round: 10px;
 
@@ -20,7 +20,7 @@ $round: 10px;
 
 .power, .confirm {
   background: none;
-  border-radius: 20px;
+  border-radius: 15px;
 }
 
 .confirm-text {
@@ -32,22 +32,22 @@ $round: 10px;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
   padding: 20px;
   border: 1px solid $border;
-  border-radius: 20px;
+  border-radius: 15px;
   background-color: $bg;
   margin: 5px;
 }
 
 .user-box {
-  padding: 15px;
+  padding: 20px;
   border: 1px solid $border;
-  border-radius: 5px;
+  border-radius: 0px;
   margin: 5px;
   font-style: italic;
 }
 
 button {
   padding: 10px;
-  border-radius: 5px;
+  border-radius: 10px;
   background-color: $bg2;
 }
 
@@ -61,7 +61,7 @@ button:hover {
 
 .power-button-box button {
   font-family: "Font Awesome 7 Free";
-  font-size: 15pt;
+  font-size: 19pt;
   padding: 10px;
 }
 
@@ -104,7 +104,7 @@ button:hover {
 .grid-list-box, .text-box {
   // background-color: $bg2;
   padding: 15px;
-  border-radius: 5px;
+  border-radius: 0px;
   margin: 5px;
   border: 1px solid $bg2;
   // border-radius: 0px;
