--- a/modules/home-manager/features/eww/config/eww.scss
+++ b/modules/home-manager/features/eww/config/eww.scss
@@ -1,5 +1,5 @@
 $border: #1C2326;
-$bg: #141B1E;
+$bg: #080808;
 $bg2: #232A2D;
 $bg3: #353C3F;
 $fg: #DADADA;
@@ -9,7 +9,7 @@ $green: #8CCF7E;
 $blue: #67B0E8;
 $purple: #C47FD5;
 
-@import "colours";
+// @import "colours";
 
 $round: 15px;
 
