--- a/modules/home-manager/features/bars/waybar/style.css
+++ b/modules/home-manager/features/bars/waybar/style.css
@@ -39,6 +39,8 @@ menuitem {
   /* padding: 5px; */
   padding-left: 20px;
   padding-right: 20px;
+  padding-top: 5px;
+  padding-bottom: 5px;
   border-radius: 5px;
 }
 
