--- a/modules/home-manager/features/eww/config/eww.scss
+++ b/modules/home-manager/features/eww/config/eww.scss
@@ -1,5 +1,5 @@
 $border: #1C2326;
-$bg: #080808;
+$bg: #141B1E;
 $bg2: #232A2D;
 $bg3: #353C3F;
 $fg: #DADADA;
@@ -9,7 +9,7 @@ $green: #8CCF7E;
 $blue: #67B0E8;
 $purple: #C47FD5;
 
-@import "colours";
+// @import "colours";
 
 $round: 15px;
 
@@ -29,7 +29,7 @@ $round: 15px;
 }
 
 .power-box, .confirm-box {
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.4);
   padding: 20px;
   border: 1px solid $border;
   border-radius: 15px;
@@ -38,10 +38,9 @@ $round: 15px;
 }
 
 .user-box {
-  padding: 20px;
-  border: 1px solid $border;
-  border-radius: 0px;
-  margin: 5px;
+  padding: 22px;
+  border-radius: 10px;
+  background-color: $bg2;
   font-style: italic;
 }
 
@@ -102,12 +101,9 @@ button:hover {
 }
 
 .grid-list-box, .text-box {
-  // background-color: $bg2;
+  background-color: $bg2;
   padding: 15px;
-  border-radius: 0px;
-  margin: 5px;
-  border: 1px solid $bg2;
-  // border-radius: 0px;
+  border-radius: 10px;
 }
 
 .quote {
