--- a/modules/home-manager/features/web-browsers/firefox/theme/userChrome.css.mustache
+++ b/modules/home-manager/features/web-browsers/firefox/theme/userChrome.css.mustache
@@ -129,6 +129,10 @@
   border-radius: 10px !important;
 }
 
+.tabbrowser-tab {
+  color: #{{base05}};
+}
+
 .tab-background:hover:not([selected]) {
   background-color: rgba({{base05-rgb-r}}, {{base05-rgb-g}}, {{base05-rgb-b}}, 0.09) !important;
   border-radius: 10px !important;
