--- a/modules/home-manager/features/discord-clients/vesktop/midnight.theme.css.mustache
+++ b/modules/home-manager/features/discord-clients/vesktop/midnight.theme.css.mustache
@@ -88,8 +88,8 @@ body {
   --text-5: #{{base04}}; /* muted channels/chats and timestamps */
 
   /* background and dark colors */
-  --bg-1: rgba({{base05-rgb-r}}, {{base05-rgb-g}}, {{base05-rgb-b}}, 0.25); /* dark buttons when clicked */
-  --bg-2: rgba({{base05-rgb-r}}, {{base05-rgb-g}}, {{base05-rgb-b}}, 0.09); /* dark buttons */
+  --bg-1: #{{base02}}; /* dark buttons when clicked */
+  --bg-2: #{{base01}}; /* dark buttons */
   --bg-3: #{{base01}}; /* spacing, secondary elements */
   --bg-4: #{{base00}}; /* main background color */
   --hover: rgba({{base05-rgb-r}}, {{base05-rgb-g}}, {{base05-rgb-b}}, 0.045); /* channels and buttons when hovered */
