--- a/modules/home-manager/features/eww/config/eww.scss
+++ b/modules/home-manager/features/eww/config/eww.scss
@@ -34,7 +34,7 @@ $round: 15px;
   border: 1px solid $border;
   border-radius: 15px;
   background-color: $bg;
-  margin: 5px;
+  margin: $margin;
 }
 
 .user-box {
