--- a/modules/home-manager/rices/interzone/waybar/style.css
+++ b/modules/home-manager/rices/interzone/waybar/style.css
@@ -6,6 +6,33 @@ window#waybar {
   font-weight: bold;
 }
 
+#tray-expander,
+#battery-expander,
+#backlight-expander {
+  margin-left: 14px;
+}
+
+#quick-access {
+  margin-left: 7px;
+}
+
+#quick-access,
+#workspaces,
+#custom-search,
+#custom-power,
+#clock {
+  background-color: @bg2;
+  padding-left: 14px;
+  padding-right: 14px;
+  margin-top: 6px;
+  margin-bottom: 6px;
+  border-radius: 8px;
+}
+
+#workspaces {
+  padding-right: 0;
+}
+
 .modules-left {
   margin-left: 15px;
 }
