--- a/modules/home-manager/rices/interzone/waybar/style.css
+++ b/modules/home-manager/rices/interzone/waybar/style.css
@@ -6,6 +6,10 @@ window#waybar {
   font-weight: bold;
 }
 
+#window {
+  margin-left: 7px;
+}
+
 #tray-expander,
 #battery-expander,
 #backlight-expander {
@@ -101,7 +105,7 @@ menuitem:hover {
 #battery.percentage,
 #wireplumber.volume,
 #backlight {
-  margin-left: 5px;
+  margin-left: 7px;
 }
 
 #custom-power {
